--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: searchpcc - 守口如瓶，笑脸相迎。 
 home: searchpcc
 paginate: 8
-email: your-email@domain.com
+email: i@searchp.cc
 production_url: http://searchpcc.com
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://searchp.cc" # the base hostname & protocol for your site
