--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ user:
   github: http://github.com/ly2513
   weibo: http://weibo.com/ly2513
   twitter: http://twitter.com/ly2513
-  weixin: ly2513
+  weixin: liyong2007
   desc: 90后，有轻度的强迫症，有轻度的代码洁癖，喜欢编程并且享受编程。
 
 # 这里替换成线上的静态资源的链接。 主要最后的"/"。也要注意css使用的字体的链接。
